--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "fastify": "^3.24.0",
+    "fastify-cors": "^6.0.2",
     "firebase-admin": "^10.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
