--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "fastify": "^3.24.0",
     "fastify-compress": "^3.6.1",
     "fastify-cors": "^6.0.2",
+    "fastify-socket.io": "^3.0.0",
     "firebase-admin": "^10.0.0",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.4.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
