--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon main.ts"
+    "dev": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +12,15 @@
   "dependencies": {
     "@types/node": "^16.11.7",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "fastify": "^3.24.0",
     "fastify-compress": "^3.6.1",
     "fastify-cors": "^6.0.2",
     "fastify-socket.io": "^3.0.0",
     "firebase-admin": "^10.0.0",
+    "koa": "^2.13.4",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.0",
     "ts-node": "^10.4.0",
